@@ -1,0 +1,20 @@
+# getdomainname.m4 serial 1
+dnl Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+dnl This file is free software, distributed under the terms of the GNU
+dnl General Public License.  As a special exception to the GNU General
+dnl Public License, this file may be distributed as part of a program
+dnl that contains a configuration script generated by Autoconf, under
+dnl the same distribution terms as the rest of that program.
+
+AC_DEFUN([gl_FUNC_GETDOMAINNAME],
+[
+  AC_REPLACE_FUNCS(getdomainname)
+  if test $ac_cv_func_getdomainname = no; then
+    gl_PREREQ_GETDOMAINNAME
+  fi
+])
+
+# Prerequisites of lib/getdomainname.c.
+AC_DEFUN([gl_PREREQ_GETDOMAINNAME], [
+  :
+])
