@@ -1,3 +1,9 @@
+2003-09-25  Simon Josefsson  <jas@extundo.com>
+            Bruno Haible  <bruno@clisp.org>
+
+	* getdomainname.h: New file.
+	* getdomainname.c: New file.
+
 2003-09-19  Karl Berry  <karl@gnu.org>
 
 	* argp.h: update from libc.
